@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(coll_scores)
 export(collapse_noun)
 export(collocate)
 export(concat_text)
