@@ -3,8 +3,9 @@ CHANGES IN R VERSION 1.3.4.9001:
     * bitTA 패키지를 bitNLP로 개명
 
   NEW FEATURES:
-    * RMeCab 패키지의 collocate 함수 대체 개발 (#9)
+    * RMeCab 패키지의 collocate(), collScores() 함수 대체 개발 (#9)
       - collocate()      
+      - coll_scores()
     
     
     
